deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    app: flask-app
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-container
        # Replace this with your actual image repository and tag if pushing to a registry
        image: my-app:v5 
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
