deployments-2nd-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: second-app
  template:
    metadata:
      labels:
        app: second-app
    spec:
      containers:
      - name: second-container
        image: my-second-app:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: second-app-service
spec:
  type: ClusterIP # Note: You don't need NodePort anymore since Ingress handles access!
  selector:
    app: second-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5001
