service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5001
      # nodePort: 30005 (Optional: Kubernetes will assign a random port between 30000-32767 if omitted)
